# decklink-c

./: .gitignore  CMakeLists.txt  decklink-c
examples/: CMakeLists.txt  list.c
generator/src/: main.rs  misc.rs  util.rs
include/: api.h  custom_allocator.h  decklink_c.h  types.h  util.h
interop/Mac/include/: platform.cpp  platform.h
src/: api.cpp  callbacks.cpp  custom.cpp  custom_allocator.cpp  system.h  types.h  util.cpp
